--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
     <title></title>
-    <link rel="stylesheet" href="/css/style.css" />
-    <link href="/fonts/roboto/stylesheet.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link href="fonts/roboto/stylesheet.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
     <div class="header">
         <div class="logo">
-            <img src="/img/logo.svg">
+            <img src="img/logo.svg">
             <div class="logo-name">
                 Мой класс
             </div>
@@ -22,7 +22,7 @@
             <div class="header-profile-name">
                 Андрей
             </div>
-            <img src="/img/profile.svg">
+            <img src="img/profile.svg">
 
         </div>
     </div>
@@ -38,7 +38,7 @@
         <div class="card test-card">
             <div class="card-top">
                 <div class="card-icon-container">
-                    <img class="card-icon" src="/img/test.svg">
+                    <img class="card-icon" src="img/test.svg">
                 </div>
                 <div class="card-title">Тест по математике</div>
             </div>
@@ -58,7 +58,7 @@
         <div class="card test-card">
             <div class="card-top">
                 <div class="card-icon-container">
-                    <img class="card-icon" src="/img/test.svg">
+                    <img class="card-icon" src="img/test.svg">
                 </div>
                 <div class="card-title">Тест по математике</div>
             </div>
@@ -77,16 +77,16 @@
 
     <div class="menu">
         <div class="menu-item">
-            <img src="/img/notebook.svg">
+            <img src="img/notebook.svg">
         </div>
         <div class="menu-item">
-            <img src="/img/clock.svg">
+            <img src="img/clock.svg">
         </div>
         <div class="menu-item">
-            <img src="/img/bell.svg">
+            <img src="img/bell.svg">
         </div>
         <div class="menu-item">
-            <img src="/img/person.svg">
+            <img src="img/person.svg">
         </div>
     </div>
 </body>
