--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title></title>
     <link rel="stylesheet" href="css/style.css" />
     <link href="fonts/roboto/stylesheet.css" rel="stylesheet" type="text/css" />
+
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
