--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
     <link href="fonts/roboto/stylesheet.css" rel="stylesheet" type="text/css" />
 
     <link rel="manifest" href="manifest.json">
+
+    <script>
+        // This is the "Offline copy of pages" service worker
+
+        const CACHE = "pwabuilder-offline";
+
+        importScripts('https://storage.googleapis.com/workbox-cdn/releases/5.1.2/workbox-sw.js');
+
+        self.addEventListener("message", (event) => {
+            if (event.data && event.data.type === "SKIP_WAITING") {
+                self.skipWaiting();
+            }
+        });
+
+        workbox.routing.registerRoute(
+            new RegExp('/*'),
+            new workbox.strategies.StaleWhileRevalidate({
+                cacheName: CACHE
+            })
+        );
+    </script>
 </head>
 
 <body>
