--- a/index.html
+++ b/index.html
@@ -11,24 +11,9 @@
     <link rel="manifest" href="manifest.json">
 
     <script>
-        // This is the "Offline copy of pages" service worker
-
-        const CACHE = "pwabuilder-offline";
-
-        importScripts('https://storage.googleapis.com/workbox-cdn/releases/5.1.2/workbox-sw.js');
-
-        self.addEventListener("message", (event) => {
-            if (event.data && event.data.type === "SKIP_WAITING") {
-                self.skipWaiting();
-            }
-        });
-
-        workbox.routing.registerRoute(
-            new RegExp('/*'),
-            new workbox.strategies.StaleWhileRevalidate({
-                cacheName: CACHE
-            })
-        );
+        if (typeof navigator.serviceWorker !== 'undefined') {
+            navigator.serviceWorker.register('/pwabuilder-sw.js')
+        }
     </script>
 </head>
 
