--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" />
     <title></title>
     <link rel="stylesheet" href="css/style.css" />
-    <link href="fonts/roboto/stylesheet.css" rel="stylesheet" type="text/css" />
+    <link href="fonts/stylesheet.css" rel="stylesheet" type="text/css" />
 
     <link rel="manifest" href="manifest.json">
 
