--- a/index.html
+++ b/index.html
@@ -43,58 +43,330 @@
             Назначены репетитором
         </div>
 
-        <div class="card test-card">
-            <div class="card-top">
-                <div class="card-icon-container">
-                    <img class="card-icon" src="img/test.svg">
+        <div class="cards-grid-container">
+            <div class="card test-card">
+                <div class="card-top">
+                    <div class="card-icon-container">
+                        <img class="card-icon" src="img/test.svg">
+                    </div>
+                    <div class="card-title">Тест по математике</div>
                 </div>
-                <div class="card-title">Тест по математике</div>
+
+                <div class="card-content">
+                    Линейные неравенства.<br />
+                    Системы и совокупности неравенств
+                </div>
+
+                <div class="card-bottom">
+                    25 сентября 2023
+                </div>
+
             </div>
 
-            <div class="card-content">
-                Линейные неравенства.<br />
-                Системы и совокупности неравенств
+            <div class="card test-card">
+                <div class="card-top">
+                    <div class="card-icon-container">
+                        <img class="card-icon" src="img/test.svg">
+                    </div>
+                    <div class="card-title">Тест по математике</div>
+                </div>
+
+                <div class="card-content">
+                    Линейные неравенства.<br />
+                    Системы и совокупности неравенств
+                </div>
+
+                <div class="card-bottom">
+                    25 сентября 2023
+                </div>
+
             </div>
 
-            <div class="card-bottom">
-                25 сентября 2023
+            <div class="card test-card">
+                <div class="card-top">
+                    <div class="card-icon-container">
+                        <img class="card-icon" src="img/test.svg">
+                    </div>
+                    <div class="card-title">Тест по математике</div>
+                </div>
+
+                <div class="card-content">
+                    Линейные неравенства.<br />
+                    Системы и совокупности неравенств
+                </div>
+
+                <div class="card-bottom">
+                    25 сентября 2023
+                </div>
+
             </div>
 
+            <div class="card test-card">
+                <div class="card-top">
+                    <div class="card-icon-container">
+                        <img class="card-icon" src="img/test.svg">
+                    </div>
+                    <div class="card-title">Тест по математике</div>
+                </div>
+
+                <div class="card-content">
+                    Линейные неравенства.<br />
+                    Системы и совокупности неравенств
+                </div>
+
+                <div class="card-bottom">
+                    25 сентября 2023
+                </div>
+
+            </div>
+
+            <div class="card test-card">
+                <div class="card-top">
+                    <div class="card-icon-container">
+                        <img class="card-icon" src="img/test.svg">
+                    </div>
+                    <div class="card-title">Тест по математике</div>
+                </div>
+
+                <div class="card-content">
+                    Линейные неравенства.<br />
+                    Системы и совокупности неравенств
+                </div>
+
+                <div class="card-bottom">
+                    25 сентября 2023
+                </div>
+
+            </div>
+
+            <div class="card test-card">
+                <div class="card-top">
+                    <div class="card-icon-container">
+                        <img class="card-icon" src="img/test.svg">
+                    </div>
+                    <div class="card-title">Тест по математике</div>
+                </div>
+
+                <div class="card-content">
+                    Линейные неравенства.<br />
+                    Системы и совокупности неравенств
+                </div>
+
+                <div class="card-bottom">
+                    25 сентября 2023
+                </div>
+
+            </div>
+
+            <div class="card test-card">
+                <div class="card-top">
+                    <div class="card-icon-container">
+                        <img class="card-icon" src="img/test.svg">
+                    </div>
+                    <div class="card-title">Тест по математике</div>
+                </div>
+
+                <div class="card-content">
+                    Линейные неравенства.<br />
+                    Системы и совокупности неравенств
+                </div>
+
+                <div class="card-bottom">
+                    25 сентября 2023
+                </div>
+
+            </div>
+
+            <div class="card test-card">
+                <div class="card-top">
+                    <div class="card-icon-container">
+                        <img class="card-icon" src="img/test.svg">
+                    </div>
+                    <div class="card-title">Тест по математике</div>
+                </div>
+
+                <div class="card-content">
+                    Линейные неравенства.<br />
+                    Системы и совокупности неравенств
+                </div>
+
+                <div class="card-bottom">
+                    25 сентября 2023
+                </div>
+
+            </div>
+
+            <div class="card test-card">
+                <div class="card-top">
+                    <div class="card-icon-container">
+                        <img class="card-icon" src="img/test.svg">
+                    </div>
+                    <div class="card-title">Тест по математике</div>
+                </div>
+
+                <div class="card-content">
+                    Линейные неравенства.<br />
+                    Системы и совокупности неравенств
+                </div>
+
+                <div class="card-bottom">
+                    25 сентября 2023
+                </div>
+
+            </div>
+
+            <div class="card test-card">
+                <div class="card-top">
+                    <div class="card-icon-container">
+                        <img class="card-icon" src="img/test.svg">
+                    </div>
+                    <div class="card-title">Тест по математике</div>
+                </div>
+
+                <div class="card-content">
+                    Линейные неравенства.<br />
+                    Системы и совокупности неравенств
+                </div>
+
+                <div class="card-bottom">
+                    25 сентября 2023
+                </div>
+
+            </div>
+
+            <div class="card test-card">
+                <div class="card-top">
+                    <div class="card-icon-container">
+                        <img class="card-icon" src="img/test.svg">
+                    </div>
+                    <div class="card-title">Тест по математике</div>
+                </div>
+
+                <div class="card-content">
+                    Линейные неравенства.<br />
+                    Системы и совокупности неравенств
+                </div>
+
+                <div class="card-bottom">
+                    25 сентября 2023
+                </div>
+
+            </div>
+
+            <div class="card test-card">
+                <div class="card-top">
+                    <div class="card-icon-container">
+                        <img class="card-icon" src="img/test.svg">
+                    </div>
+                    <div class="card-title">Тест по математике</div>
+                </div>
+
+                <div class="card-content">
+                    Линейные неравенства.<br />
+                    Системы и совокупности неравенств
+                </div>
+
+                <div class="card-bottom">
+                    25 сентября 2023
+                </div>
+
+            </div>
+
+            <div class="card test-card">
+                <div class="card-top">
+                    <div class="card-icon-container">
+                        <img class="card-icon" src="img/test.svg">
+                    </div>
+                    <div class="card-title">Тест по математике</div>
+                </div>
+
+                <div class="card-content">
+                    Линейные неравенства.<br />
+                    Системы и совокупности неравенств
+                </div>
+
+                <div class="card-bottom">
+                    25 сентября 2023
+                </div>
+
+            </div>
+
+            <div class="card test-card">
+                <div class="card-top">
+                    <div class="card-icon-container">
+                        <img class="card-icon" src="img/test.svg">
+                    </div>
+                    <div class="card-title">Тест по математике</div>
+                </div>
+
+                <div class="card-content">
+                    Линейные неравенства.<br />
+                    Системы и совокупности неравенств
+                </div>
+
+                <div class="card-bottom">
+                    25 сентября 2023
+                </div>
+
+            </div>
+
+            <div class="card test-card">
+                <div class="card-top">
+                    <div class="card-icon-container">
+                        <img class="card-icon" src="img/test.svg">
+                    </div>
+                    <div class="card-title">Тест по математике</div>
+                </div>
+
+                <div class="card-content">
+                    Линейные неравенства.<br />
+                    Системы и совокупности неравенств
+                </div>
+
+                <div class="card-bottom">
+                    25 сентября 2023
+                </div>
+
+            </div>
+
+            <div class="card test-card">
+                <div class="card-top">
+                    <div class="card-icon-container">
+                        <img class="card-icon" src="img/test.svg">
+                    </div>
+                    <div class="card-title">Тест по математике</div>
+                </div>
+
+                <div class="card-content">
+                    Линейные неравенства.<br />
+                    Системы и совокупности неравенств
+                </div>
+
+                <div class="card-bottom">
+                    25 сентября 2023
+                </div>
+
+            </div>
         </div>
 
-
-        <div class="card test-card">
-            <div class="card-top">
-                <div class="card-icon-container">
-                    <img class="card-icon" src="img/test.svg">
-                </div>
-                <div class="card-title">Тест по математике</div>
-            </div>
-
-            <div class="card-content">
-                Линейные неравенства.<br />
-                Системы и совокупности неравенств
-            </div>
-
-            <div class="card-bottom">
-                25 сентября 2023
-            </div>
-
-        </div>
     </div>
 
     <div class="menu">
         <div class="menu-item">
             <img src="img/notebook.svg">
+            <div class="menu-item-name">Актуальные тесты</div>
         </div>
         <div class="menu-item">
             <img src="img/clock.svg">
+            <div class="menu-item-name">Пройденные тесты</div>
         </div>
         <div class="menu-item">
             <img src="img/bell.svg">
+            <div class="menu-item-name">Уведомления</div>
         </div>
         <div class="menu-item">
             <img src="img/person.svg">
+            <div class="menu-item-name">Мой профиль</div>
         </div>
     </div>
 </body>
